--- a/e8266/platformio.ini
+++ b/e8266/platformio.ini
@@ -8,7 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:lolin32_lite]
-platform = espressif32
-board = lolin32_lite
+[env:esp12e]
+platform = espressif8266
+board = esp12e
 framework = arduino
+monitor_speed = 115200
+lib_deps = ESP Async WebServer
+;  arduino-libraries/Arduino_HSON @ ^0.1.0
+  ayushsharma82/AsyncElegantOTA @ ^2.2.5
