--- a/esp32_Laser/platformio.ini
+++ b/esp32_Laser/platformio.ini
@@ -16,3 +16,4 @@ monitor_speed = 115200
 lib_deps = ESP Async WebServer
 	arduino-libraries/Arduino_JSON @ ^0.1.0
 	ayushsharma82/AsyncElegantOTA @ ^2.2.5
+	JeeUI2-master/JeeUI2
